--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "core-js": "^3.4.4",
     "element-ui": "^2.13.0",
     "moment": "^2.24.0",
+    "qiniu-js": "^2.5.5",
+    "tiptap-extensions": "^1.28.6",
     "typed.js": "^2.0.11",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.5",
     "vue-video-section": "^1.0.2",
+    "vue-wysiwyg": "^1.7.2",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
